--- a/style.css
+++ b/style.css
@@ -1,220 +1,286 @@
 @font-face {
-    font-family: 'Myfont';
-    src: url(./assets/fonts/static/Inconsolata-Bold.ttf) format(truetype);
-    font-weight: bold;
+  font-family: "Myfont";
+  src: url(./assets/fonts/static/Inconsolata-Bold.ttf) format(truetype);
+  font-weight: bold;
 }
 
 @font-face {
-    font-family: 'Myfont';
-    src: url(./assets/fonts/static/Inconsolata-ExtraBold.ttf);
-    font-weight: bolder;
+  font-family: "Myfont";
+  src: url(./assets/fonts/static/Inconsolata-ExtraBold.ttf);
+  font-weight: bolder;
 }
 
 @font-face {
-    font-family: 'Myfont';
-    src: url(./assets/fonts/static/Inconsolata-Regular.ttf);
-    font-weight: normal;
+  font-family: "Myfont";
+  src: url(./assets/fonts/static/Inconsolata-Regular.ttf);
+  font-weight: normal;
 }
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 56%;
+  font-size: 50%;
 }
 
 body {
-    background-color: hsl(248, 70%, 10%);
-    background-image: url(./assets/images/pattern-circle.svg), url(./assets/images/pattern-lines.svg), url(./assets/images/pattern-squiggly-line-bottom-desktop.svg), url(./assets/images/pattern-squiggly-line-top.svg);
-    background-position: center right, top, bottom left, top right;
-    background-repeat: no-repeat, repeat-x, no-repeat, no-repeat;  
-    background-size: 10%, 80%, 65% 45%, 30%;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    width: 100%;
-    max-width: 168rem;
-    /* border: 2px dotted green; */
-    flex-direction: column;
+  background-color: hsl(248, 70%, 10%);
+  background-image: url(./assets/images/pattern-circle.svg),
+    url(./assets/images/pattern-lines.svg),
+    url(./assets/images/pattern-squiggly-line-bottom-desktop.svg),
+    url(./assets/images/pattern-squiggly-line-top.svg);
+  background-position: center right, top, bottom left, top right;
+  background-repeat: no-repeat, repeat-x, no-repeat, no-repeat;
+  background-size: 10%, 80%, 65% 45%, 30%;
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  width: 100%;
+  max-width: 168rem;
+  /* border: 2px dotted green; */
+  flex-direction: column;
 }
 
 .logo-div {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    padding-block-start: 2rem;
-    /* border: 2px dotted green ; */
-    
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding-block-start: 2rem;
+  /* border: 2px dotted green ; */
 }
 
 .logo-div img {
-    display: inline-block;
-    width: 2rem;
+  display: inline-block;
+  width: 2rem;
 }
 
 .logo-div p {
-    font-size: 1.4rem;
-    color: hsl(252, 6%, 83%);
-    font-family: 'Myfont';
-    font-weight: bold;
+  font-size: 1.4rem;
+  color: hsl(252, 6%, 83%);
+  font-family: "Myfont";
+  font-weight: bold;
 }
 
 .wrapper {
-    margin: 0 auto;
-    width: 70%;
-    max-width: 168rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    /* border: 2px dotted green; */
+  margin: 0 auto;
+  width: 70%;
+  max-width: 168rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px dotted green;
 }
 
 header {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    justify-content: center;
-    align-items: center;
-    margin-block: 2rem;
-    /* border: 2px solid yellowgreen; */
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  justify-content: center;
+  align-items: center;
+  margin-block: 2rem;
+  /* border: 2px solid yellowgreen; */
 }
 
 h1 {
-    font-size: 4rem;
-    /* width: 95%; */
-    text-align: center;
-    word-spacing: 1rem;
-    /* border: 2px solid red; */
-    line-height: 4;
-    /* margin-bottom: 5rem; */
-    color: hsl(0, 0%, 100%);
-    font-family: 'Myfont';
-    font-weight: bolder;
+  font-size: 4rem;
+  /* width: 95%; */
+  text-align: center;
+  word-spacing: 1rem;
+  /* border: 2px solid red; */
+  line-height: 4;
+  /* margin-bottom: 5rem; */
+  color: hsl(0, 0%, 100%);
+  font-family: "Myfont";
+  font-weight: bolder;
 }
 
 header p {
-    font-size: 1.5rem;
-    word-spacing: .5rem;
-    color: hsl(245, 15%, 58%);
-    font-family: 'Myfont';
-    font-weight: bold;
+  font-size: 1.5rem;
+  word-spacing: 0.5rem;
+  color: hsl(245, 15%, 58%);
+  font-family: "Myfont";
+  font-weight: bold;
 }
 
 .div_upload-section {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 1.5rem;
+  color: hsl(252, 6%, 83%);
+  font-family: "Myfont";
+  font-weight: normal;
 }
 
-.div_upload-section {
+/* .div_upload-section {
     font-size: 1.5rem;
     color: hsl(252, 6%, 83%);
     font-family: 'Myfont';
     font-weight: normal;
-}
+} */
 
 .div_image-upload {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 1px dashed hsl(245, 15%, 58%);
-    background-color: hsla(245, 19%, 35%,0.3);
-    padding-block: 2rem;
-    border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px dashed hsl(245, 15%, 58%);
+  background-color: hsla(245, 19%, 35%, 0.3);
+  padding-block: 2rem;
+  border-radius: 5px;
 }
 
 .div_image-upload img {
- display: inline-block;
- background-color: hsla(245, 19%, 35%, 0.5);
- padding: .8rem;
- border-radius: 10px;   
+  display: inline-block;
+  background-color: hsla(245, 19%, 35%, 0.5);
+  padding: 0.8rem;
+  border-radius: 10px;
 }
 
 .div_image-upload p {
-    font-size: 1.5rem;
-    color: hsl(252, 6%, 83%);
-    font-family: 'Myfont';
-    font-weight: normal;
+  font-size: 1.5rem;
+  color: hsl(252, 6%, 83%);
+  font-family: "Myfont";
+  font-weight: normal;
 }
 
 .div_image-checkbox {
-    display: flex;
-    gap: .4rem;
-    /* justify-content: center; */
-    align-items: center;
+  display: flex;
+  gap: 0.4rem;
+  /* justify-content: center; */
+  align-items: center;
 }
 
 .custom-checkbox input {
-    display: none;
+  display: none;
 }
 
 .custom-checkbox span {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: hsla(245, 19%, 35%, 0.2);
-    border: 2px solid hsl(245, 19%, 35%);
-    vertical-align: middle;
-    cursor: pointer;
-    margin-right: 1rem;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: hsla(245, 19%, 35%, 0.2);
+  border: 2px solid hsl(245, 19%, 35%);
+  vertical-align: middle;
+  cursor: pointer;
+  margin-right: 1rem;
 }
 
 .custom-checkbox input:checked + span {
-    background-color: green;
-} 
+  background-color: green;
+}
 .div_image-checkbox label {
-    font-size: 1.2rem;
-    color: hsl(245, 19%, 35%);
+  font-size: 1.2rem;
+  color: hsl(245, 19%, 35%);
 }
 
 img {
-    display: block;
+  display: block;
 }
 
 form {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    margin-top: 3rem;
-    font-size: 1.5rem;
-    /* border: 2px solid greenyellow ; */
-    color: hsl(0, 0%, 100%);
-    font-family: 'Myfont';
-    font-weight: normal;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 3rem;
+  font-size: 1.5rem;
+  /* border: 2px solid greenyellow ; */
+  color: hsl(0, 0%, 100%);
+  font-family: "Myfont";
+  font-weight: normal;
 }
 
-
-
 form input {
-    padding: 1rem;
-    border-radius: 5px;
-    border: 1px solid hsl(245, 15%, 58%);
-    background-color: hsla(245, 19%, 35%,0.3);
+  padding: 1rem;
+  border-radius: 5px;
+  border: 1px solid hsl(245, 15%, 58%);
+  background-color: hsla(245, 19%, 35%, 0.3);
 }
 
 .form-input {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
-
 button {
-    padding: 1rem;
-    border-radius: 5px;
-    background-color: hsl(7, 88%, 67%);
-    border: none;
-    color: hsl(248, 70%, 10%);
-    font-family: 'Myfont';
-    font-weight: bolder;
+  padding: 1rem;
+  border-radius: 5px;
+  background-color: hsl(7, 88%, 67%);
+  border: none;
+  color: hsl(248, 70%, 10%);
+  font-family: "Myfont";
+  font-weight: bolder;
+  font-size: 1.5rem;
+}
+
+@media (max-width: 375px) {
+  html {
+    font-size: 37.5%;
+  }
+
+  body {
+    background-image: url(./assets/images/pattern-circle.svg),
+      url(./assets/images/pattern-lines.svg),
+      url(./assets/images/pattern-squiggly-line-bottom-desktop.svg),
+      url(./assets/images/pattern-squiggly-line-top.svg),
+      url(./assets/images/background-mobile.png);
+    background-position: center right, top, bottom left, top right,
+      center bottom;
+    background-repeat: no-repeat, repeat-x, no-repeat, no-repeat, no-repeat;
+    background-size: 10%, 80%, 50% 45%, 30%, 100%;
+  }
+
+  .wrapper {
+    width: 100%;
+  }
+
+  header {
+    border: 2px solid red;
+    width: 95%;
+    margin-block-start: 5rem;
+    padding: 0.5rem;
+  }
+
+  h1 {
+    font-size: 4rem;
+    word-spacing: 0.5rem;
+  }
+
+  header p {
+    font-size: 2.5rem;
+    text-align: center;
+    word-spacing: 0.2rem;
+    width: 80%;
+    line-height: 1.2;
+  }
+
+  .div_upload-section {
+    width: 90%;
+  }
+
+  .div_upload-section {
+    font-size: 2rem;
+  }
+
+  .div_image-upload p {
+    font-size: 2rem;
+  }
+
+  .div_image-checkbox label {
     font-size: 1.5rem;
+  }
+
+  form {
+    width: 90%;
+    font-size: 2rem;
+  }
 }
