--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 2px dotted green;
+  /* border: 2px dotted green; */
 }
 
 header {
@@ -244,7 +244,7 @@ button {
   }
 
   header {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 95%;
     margin-block-start: 5rem;
     padding: 0.5rem;
@@ -307,7 +307,7 @@ button {
   }
 
   header {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 95%;
     margin-block-start: 5rem;
     padding: 0.5rem;
