--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 2px dotted green;
+  /* border: 2px dotted green; */
 }
 
 header {
